style.css
/*  NOTES
    Colors: 
        Dark Green: #424237
        Beige: #C9BBAA
        Light: #E6E6E1
        Orange: #D27456
        Rust: #9C452A

    Fonts: 
        font-family: 'Source Sans 3', sans-serif;

        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet"> 

*/

/* CSS Reset */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/*
[class*="col-"] {
    padding: 0;
  } */


/* -------------- Universal Styles & utility classes--------------------- */


/* Padding Utility Classes ---------- */ 
.padded { padding: 5%; }
.padded-sm { padding: 2.5%; }
.padded-lg { padding: 10%;  }

.padded-05 { padding: 0.5rem; }
.padded-1 { padding: 1rem; }
.padded-2 { padding: 2rem; }

.padded-t { padding-top: 5%; }
.padded-b { padding-bottom: 5%; }
.padded-l { padding-left: 5%; }
.padded-r { padding-right: 5%; }

.padded-tb { padding-top: 5%; padding-bottom: 5%; }
.padded-lr { padding-left: 5%; padding-right: 5%; }

.padded-t-1 { padding-top: 1rem; }
.padded-b-1 { padding-bottom: 1rem; }
.padded-l-1 { padding-left: 1rem; }
.padded-r-1 { padding-right: 1rem; }

.padded-t-2 { padding-top: 2rem; }
.padded-b-2 { padding-bottom: 2rem; }
.padded-l-2 { padding-left: 2rem; }
.padded-r-2 { padding-right: 2rem; }

.padded-t-0 { padding-top: 0; }
.padded-b-0 { padding-bottom: 0; }
.padded-l-0 { padding-left: 0; }
.padded-r-0 { padding-right: 0; }

.padded-l-05 { padding-left: 0.5rem; }

/* Margin Utility Classes -----------*/ 

.margin-t { margin-top: 5%; }
.margin-b { margin-bottom: 5%; }
.margin-l { margin-left: 5%; }
.margin-r { margin-right: 5%; }

.margin-t-0 { margin-top: 0; }
.margin-b-0 { margin-bottom: 0; }
.margin-l-0 { margin-left: 0; }
.margin-r-0 { margin-right: 0; }

.margin-t-1 { margin-top: 1rem; }
.margin-b-1 { margin-bottom: 1rem; }

/* Height Classes ---------- */

.tall-50 { min-height: 50vh; }
.tall-60 { min-height: 60vh; }
.tall-70 { min-height: 70vh; }
.tall-80 { min-height: 80vh; }
.tall-90 { min-height: 90vh; }
.tall-100 { min-height: 100vh; }

/* wWdth Classes ---------- */

.width-30 { min-width: 30vw; }


/* Background & Background Images  ------------------- */

.bg-dark {
    background-color: #424237;
    color: #E6E6E1;
}
.bg-featured { background-color: #C9BBAA;}
.bg-light { background-color:#E6E6E1;}


/* Image Styles */

.bg-image {
    background-image: url('/images/the-sleep-co1.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    /*min-height: 10rem;*/
}

.landscape {    padding-bottom: 65%;}
.portrait {    padding-bottom: 125%;}
.square {    padding-bottom: 100%;}

/* Typography Styles--------------------- */

body {
    font-family: 'Source Sans 3', sans-serif;
    color:#424237;
}

h3, h4, h5, h6 {
	line-height: 1.1;
	margin-bottom: 1rem;
}

h2 { font-size: 1.3rem; }
h3 { font-size: 4rem; }

p {
    font-weight: 300;
    line-height: 1.4;
    margin-bottom: 1rem;
}

h1:last-child, 
h2:last-child, 
h3:last-child, 
h4:last-child, 
h5:last-child, 
h6:last-child, 
p:last-child {
    margin-bottom: 0;
}

a {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px solid;
}

a:hover {
    color: #D27456;
}

.font-weight-light      { font-weight: 300;}
.font-weight-normal     { font-weight: 400;}
.font-weight-extra-bold { font-weight: 800;}

.uppercase      { text-transform: uppercase;}

.left           { text-align: left; }
.center         { text-align: center; }
.right          { text-align: right; }

.light-text     { color: #E6E6E1; } 
.featured-text  { color: #9C452A; }

.small-text { font-size: 1.5rem;}
.medium-text {
    font-size: 2rem;
    line-height: 1.1;
}
.big-text   { font-size: 4rem; }

.subtitle {
    font-size: 1.2rem;
    color: rgb(120,120,125);
}


/* Header Styles & Footer Styles-------------------------  */ 

.header-bg {
    background-image: url('/images/luna-guest-house-bed-end.jpg');
    background-size: cover;
    background-position: center;
    padding: 2% 5%;
}

h1 {
    font-size: 7rem;
}


nav a {
    padding: 0.5rem;
    line-height: 1;
    border: none;
}

.header-nav {
    background-color: #C9BBAA;
}

.logo h2 {
    font-size: 2rem;
}

footer a {
    border: none;
    display: block;
}






/* Background Images—————————-—— */


/*.bg-image {
    background-color:  rgb(199, 199, 199);
    background-size: cover; 
    background-position: center; 
    background-repeat: no-repeat;
} */


.bg-library {   
    background-image: url('/images/luna-guest-house-library.jpg');
    background-position: 50% 42%;
    border: 10px solid white;
}
.bg-bed {   
    background-image: url('/images/luna-guest-house-bed-right.jpg');
    background-position: 50% 42%;
    border: 10px solid white;
}
.bg-bath {   
    background-image: url('/images/luna-guest-house-bath.jpg');
    border: 10px solid white;
}
.bg-flower {   
    background-image: url('/images/luna-guest-house-flowers.jpg');
    border: 10px solid white;
}
.bg-breakfast {   
    background-image: url('/images/luna-guest-house-breakfast.jpg');
    border: 10px solid white;
}
.bg-bottle {   
    background-image: url('/images/luna-guest-house-plastic-bottle.jpg');
    border: 10px solid white;
}


.bg-pug {   
    background-image: url('/images/the-sleep-co1.jpg');
    background-position: 50% 42%;
    border: 10px solid white;
}
.bg-bed {   background-image: url('/images/luna-guest-house-bed-right.jpg');}
.bg-pillow {   
    background-image: url('/images/the-sleep-co2.jpg');
    background-position: 50% 54%;
}


/* Icon Grid - Fontawesome-------- */

.fa {
    display: block;
    text-align: center;
    margin-bottom: 1rem;
    font-size: 1.8rem;
}  

.material-symbols-outlined {
    /*display: block;*/
    line-height: 1;
}

/* Testimonial Block ------------ */
.quote-icon {
    font-size: 6rem;
    display: inline-block;
    color: rgb(120,120,125);
    line-height: 1;
}


/* Buttons & Forms  ------------ */
input,
textarea {
    width: 100%;
    display: block;
    margin-bottom: 0.3rem;
    padding: 0.5rem;
    font-family: inherit;
    font-size: 0.9rem;
    border: 2px solid transparent;
}

input:focus,
textarea:focus {
    border: 2px solid #9C452A;
    outline: none;
}

.button {
    padding: 0.5rem 2rem;
    background-color: #C9BBAA;
    color: inherit;
    appearance: none;
    border: 2px solid #C9BBAA;
    border-radius: 6px;
  }

  .feature-button {
    background-color: #D27456;
    border: 2px solid #D27456;
    color: #424237
  }





/* General CSS Responsive Styles (Apply everywhere, unless overridden)*/  
.show-xs, 
.show-sm,
.show-md {
	display: none;
}

/* --------------- MD Media Query (64em / 1024px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 64em) {

    body { border: 2px solid green; padding: 0.5rem;}

	.show-md { display: block; }
	.hide-md { display: none; }

    .md-tall-80 {min-height: 80vh;}
}

/* --------------- SM Media Query (48em / 768px) --------------- */ 
/* Styles added here will apply at devices smaller than 768px, or zoomed in equivalent */ 

@media (max-width: 48em) {

    body { border: 2px solid blue;}

    html    { font-size: 14px;}
    p       { font-size: 1.1rem;}

	.show-sm { display: block; }
	.hide-sm { display: none; }

    .sm-text-center {text-align: center;}
    .sm-text-left {text-align: left;}
    .sm-text-right {text-align: right;}

    .sm-padded {padding: 5%;}
    .sm-padded-1 {padding: 1rem;}
    .sm-padded-05 {padding: 0.5rem;}

    .sm-padded-t-0 {padding-top: 0;}
    .sm-padded-b-0 {padding-bottom: 0;}
    .sm-margin-t-0 {margin-top: 0;}
    .sm-margin-b-0 {margin-bottom: 0;}

    .logo h2 { font-size: 2rem;}

    header h3 { font-size: 11vw;}
}

/* --------------- XS Media Query (36em / 576px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 36em) {

    body { border: 2px solid red;}

		.show-xs { display: block; }
		.hide-xs { display: none; }

        h1 {
            font-size: 1.4rem;
            line-height: 1.1;
        }

        h2 { font-size: 2rem; }

        .big-text       { font-size: 3.5rem; }
        .medium-text    { font-size: 1.5rem; }

        .xs-tall-50 { min-height: 50vh; }

        
}


/* --------------- XXS Media Query (25em / 400px) --------------- */ 
/* Styles added here will apply at devices smaller than 576px, or zoomed in equivalent */ 

@media (max-width: 25em) {

    html { font-size: 12px;}

	[class*=grid] .xxs-stack { 
        flex-basis: 100%;
        max-width: 100%;
    }
		
}

